<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_with_logo_height"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/wave"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView5"
        android:layout_gravity="center"
        android:background="@drawable/back_gray_2gradient"
        android:orientation="vertical"
        android:paddingLeft="42dp"
        android:paddingRight="42dp"
        >


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">
        </FrameLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/outer_margin_big"
            android:background="@color/white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"/>

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/button_back_gradient_radial"
            android:text="@string/btn_login"
            android:textAllCaps="true"
            android:textColor="@color/btn_login"/>

        <!-- Link to Login Screen -->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
        </FrameLayout>

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:singleLine="false"
            android:text="@string/registration_via_email"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
        </FrameLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_with_logo_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="bottom|center_horizontal"
        android:padding="@dimen/header_with_logo_padding"
        android:scaleType="centerInside"
        android:src="@drawable/logo_title"/>
</RelativeLayout>